test/files/neg/t677.scala
object ga {
  val zx: Nothing = {() => 4}
}
